--- a/css/style.css
+++ b/css/style.css
@@ -1300,6 +1300,7 @@ img {
 }
 .article-entry {
   margin-top: 3rem;
+  text-align: justify;
   color: #1e3e3f;
 }
 .article-entry::before,
@@ -1858,13 +1859,7 @@ pre .javascript .function {
   content: '\f12a';
 }
 .navbar .nav.nav-main .nav-item:nth-child(3) .nav-item-link::before {
-  content: '\f1a9';
-}
-.navbar .nav.nav-main .nav-item:nth-child(4) .nav-item-link::before {
   content: '\f174';
-}
-.navbar .nav.nav-main .nav-item-search::before {
-  display: none;
 }
 .navbar-bottom {
   position: absolute;
