--- a/css/style.css
+++ b/css/style.css
@@ -1861,6 +1861,9 @@ pre .javascript .function {
 .navbar .nav.nav-main .nav-item:nth-child(3) .nav-item-link::before {
   content: '\f174';
 }
+.navbar .nav.nav-main .nav-item:nth-child(4) .nav-item-link::before {
+  content: '\f11e';
+}
 .navbar-bottom {
   position: absolute;
   bottom: 0;
